@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-13T08:29:22Z",
+  "timestamp" : "2022-10-13T16:33:29Z",
   "count_outdated" : 2491,
   "uniques_outdated" : 638,
   "count" : 2520,
@@ -7,8 +7,8 @@
   "clones" : [
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
