@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
